Fix some things to properly work on iOS

--- a/iDiscountVerifier/www/css/style.css
+++ b/iDiscountVerifier/www/css/style.css
@@ -1,6 +1,7 @@
 /* Empty. Add your own CSS if you like */
 .verifier-actions {
     position: absolute;
+    width: 89%;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
